internal/controllers/testdata/build_collector_ingress.input.yaml
metadata:
  name: test
  namespace: test
spec:
  image: test
  replicas: 1
  mode: deployment
  ingress:
    type: ingress
    hostname: example.com
    annotations:
      something: "true"
  config:
    receivers:
      examplereceiver:
        endpoint: "0.0.0.0:12345"
    exporters:
      debug:
    service:
      pipelines:
        metrics:
          receivers: [examplereceiver]
          exporters: [debug]
